# vk-beginning-240229

./: local.properties
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  VulkanTexture.cpp  VulkanTexture.h  hellovk.cpp  hellovk.h  vk_main.cpp
app/src/main/java/com/android/hellovk/: VulkanActivity.kt
app/src/main/res/values/: themes.xml
app/src/main/shaders/: shader.vert
